# ode-360x-adapter

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHANGE_MANAGEMENT.md  CONTRIBUTING.md  PROGRAM-PLAN.md  README.md  STRUCTURE.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
docker/: Dockerfile.python  docker-compose.yml
docs/: fhir-servers.md  running-a-fhir-server.md
dotnet/: Ode.Adapter.sln  README.md  STATUS.md
java/: README.md  STATUS.md  pom.xml
node/: README.md  package.json  server.js
node/lib/: payloads.js
node/public/: app.js  index.html  styles.css
python/: ARCHITECTURE.md  README.md  TODO.md  pyproject.toml  requirements.txt
python/ode_adapter/: __init__.py  app.py  ccda_to_fhir.py  config.py  cow.py  engine.py  fhir_to_ccda.py  hl7v2.py  ports.py  referral_fhir.py  registry.py  state_machine.py  stores.py  xdm.py
python/ode_adapter/plugins/: __init__.py
python/ode_adapter/plugins/fhir/: generic_r4.py  medplum.py  onyx.py
python/ode_adapter/plugins/ihe/: direct_smtp.py  http_transport.py  json_envelope.py  xdm_zip.py
python/samples/: demo.py  inbound_pcc55.json  referral_request.xml
python/tests/: test_adapter.py  test_medplum.py  test_stub_360x.py  test_stub_sender.py
python/tools/: README.md  stub_360x_core.py  stub_360x_sender.py  stub_360x_server.py
spec/: README.md
spec/contract/: conformance-checklist.md  ports.md
spec/mapping/: 360x-cow-crosswalk.md  attachments.md  content.md  loss-profile.md  transactions.md
spec/use-cases/: uc01-head-neck-cancer.md  (+1 more)
wiki/: Home.md
(+31 files in other folders)
